# storylets-rs

./: Cargo.toml  README.md  todo.org
examples/: story.rs  story.throne
src/: add-phrase-test.throne  basic-test.throne  concise-test.throne  context.rs  difficulty-test.throne  grammar.rs  lib.rs  quality-change-test.throne  quality-description-test.throne  requirement-messages-test.throne  result-requirement-test.throne  storylets.throne  urgency-test.throne
