[package]
name = "storylets"
version = "0.1.0"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
throne = "0.1.0"
derivative = { git = "https://github.com/mcarton/rust-derivative", rev = "5ae882" }
rand = "0.7.3"
regex = "1.3.3"
unidecode = "0.3.0"

[dev-dependencies]
colored = "1.9.2"