[package]
name = "storylets"
version = "0.1.0"
description = "Embeddable storylet-based narrative engine for games"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/t-mw/storylets-rs"
readme = "README.md"
keywords = ["scripting", "game", "language", "storylets"]
categories = ["game-development"]
license = "MIT"
edition = "2018"
exclude = ["todo.org"]

[dependencies]
throne = "0.2.0"
rand = "0.7.3"
regex = "1.3.3"
unidecode = "0.3.0"

[dev-dependencies]
colored = "1.9.2"
